--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:dev": "NODE_ENV=dev node ./bin/www",
-    "start:production": "NODE_ENV=production node ./bin/www"
+    "start:dev": "NODE_ENV=dev nodemon ./bin/www",
+    "start:production": "NODE_ENV=production nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "mongoose": "^6.3.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.16"
   }
 }
